--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,39 +1,22 @@
 navbar_entries:
-  - title: about
-    url: about
+  - title: resume
+    url: resume
 
   - title: blog
     url: blog
 
-  - title: website
-    url: https://www.abhinav.co
-
 project_entries:
-  - title: Project 1
-    url: overview-post
-    desc: This is an example project, configured in _data/home.yml
+  - title: Vtuber Profitability
+    url: https://github.com/juanliu27/Vtuber_Profitability
+    desc: Dissertation of mine about profitability of virtual livers using Systematic Dynamics.
 
-  - title: Project 2
-    url: overview-post
-    desc: Projects are shown in card layout
+  - title: weibo_spammer
+    url: https://github.com/juanliu27/weibo_spammer_behavior
+    desc: Coursework of Principles and Applications of Data Visualization
 
   - title: Project 3
     url: overview-post
     desc: You can control visibility from _config.yml file
-
-  - title: Project 4
-    url: overview-post
-    desc: This project uses highlight markup, configured in _data/home.yml
-    highlight: WIP
-
-  - title: Project 5
-    url: overview-post
-    desc: Moonwalk also has horizontal list (used in header and footer)
-    highlight: WIP
-
-  - title: Project 6
-    url: overview-post
-    desc: It also has a scalable vertical list (in case you need it)
 
 old_project_entries:
   - title: Soopr
